chanages:  - added carousel indicators aka dots  - reduced tile size by 50%  - alignment of name to bottom with correct placement  - disabled the auto rotate & infinit transition of carousel.

--- a/packages/boba/gateway/src/containers/ecosystem/Ecosystem.module.scss
+++ b/packages/boba/gateway/src/containers/ecosystem/Ecosystem.module.scss
@@ -5,5 +5,7 @@
   flex-direction: column;
   padding: 10px;
   padding-top: 0px;
-
+   > div {
+     margin: 0;
+   }
 }
